Fix dropdown menu on IE9

--- a/theme/next_responsive/less/header.less
+++ b/theme/next_responsive/less/header.less
@@ -221,7 +221,7 @@ li.dropdown li.dropdown{
 
 /*fixes rollver bug on menu */
 .main-nav li {line-height: 16px;}
-.ie8,.ie11 {
+.ie8,.ie9,.ie11 {
 	.dropdown-menu {margin:0px}
 	.closebtn {}
 	@media (min-width: 768px) {
